refactor: 大规模重构
1. 根据新的RBAC设计规范重构所有代码
2. 去掉历史无用表相关逻辑