@@ -7,10 +7,8 @@ import java.util.stream.Collectors;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.collection.ListUtil;
 import cn.hutool.core.util.StrUtil;
-import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.ingot.cloud.pms.api.model.convert.AuthorityConvert;
 import com.ingot.cloud.pms.api.model.domain.MetaApp;
-import com.ingot.cloud.pms.api.model.domain.SysApplicationTenant;
 import com.ingot.cloud.pms.api.model.types.AuthorityType;
 import com.ingot.cloud.pms.api.model.vo.authority.AuthorityTreeNodeVO;
 import com.ingot.cloud.pms.api.model.vo.authority.BizAuthorityTreeNodeVO;
@@ -18,34 +16,31 @@ import com.ingot.cloud.pms.api.model.vo.authority.BizAuthorityVO;
 import com.ingot.cloud.pms.common.BizFilter;
 import com.ingot.cloud.pms.core.org.TenantUtils;
 import com.ingot.cloud.pms.service.biz.BizAppService;
-import com.ingot.cloud.pms.service.domain.SysApplicationTenantService;
-import com.ingot.cloud.pms.service.domain.SysAuthorityService;
-import com.ingot.framework.commons.model.enums.CommonStatusEnum;
+import com.ingot.cloud.pms.service.domain.MetaAuthorityService;
 import com.ingot.framework.commons.utils.tree.TreeUtil;
 
 /**
- * <p>Description  : AuthorityUtils.</p>
+ * <p>Description  : BizAuthorityUtils.</p>
  * <p>Author       : jy.</p>
  * <p>Date         : 2023/12/2.</p>
  * <p>Time         : 10:39.</p>
  */
-public class AuthorityUtils {
+public class BizAuthorityUtils {
 
     /**
      * 获取指定组织权限
      *
-     * @param orgId                       组织ID
-     * @param sysApplicationTenantService {@link SysApplicationTenantService}
-     * @param sysAuthorityService         {@link SysAuthorityService}
-     * @param authorityConvert            转换器
+     * @param orgId            组织ID
+     * @param appService       {@link BizAppService}
+     * @param authorityService {@link MetaAuthorityService}
+     * @param authorityConvert 转换器
      * @return {@link AuthorityTreeNodeVO}
      */
-    public static List<AuthorityTreeNodeVO> getOrgAuthorities(long orgId,
-                                                              SysApplicationTenantService sysApplicationTenantService,
-                                                              SysAuthorityService sysAuthorityService,
-                                                              AuthorityConvert authorityConvert) {
-        List<SysApplicationTenant> appList = sysApplicationTenantService.list(Wrappers.<SysApplicationTenant>lambdaQuery()
-                .eq(SysApplicationTenant::getStatus, CommonStatusEnum.ENABLE));
+    public static List<AuthorityTreeNodeVO> getTenantAuthorities(long orgId,
+                                                                 BizAppService appService,
+                                                                 MetaAuthorityService authorityService,
+                                                                 AuthorityConvert authorityConvert) {
+        List<MetaApp> appList = appService.getEnabledApps();
         if (CollUtil.isEmpty(appList)) {
             return ListUtil.empty();
         }
@@ -53,7 +48,7 @@ public class AuthorityUtils {
         return appList.stream()
                 .flatMap(app ->
                         TenantUtils.getTargetAuthorities(
-                                        orgId, app.getAuthorityId(), sysAuthorityService, authorityConvert)
+                                        orgId, app.getAuthorityId(), authorityService, authorityConvert)
                                 .stream())
                 .toList();
     }
@@ -63,8 +58,8 @@ public class AuthorityUtils {
      * 比如authorities中包含a权限，a权限对应的应用在appList中，并且该应用不可用，那么把a权限从authorities中去掉<br>
      * 去掉的权限编码比如是a.c，那么a.c.**的权限都需要去掉<br>
      */
-    public static List<AuthorityType> filterOrgLockAuthority(List<AuthorityType> authorities,
-                                                             BizAppService appService) {
+    public static <T extends AuthorityType> List<T> filterOrgLockAuthority(List<T> authorities,
+                                                                           BizAppService appService) {
         List<MetaApp> appList = CollUtil.emptyIfNull(appService.getDisabledApps());
 
         List<AuthorityType> removeAuthorities = appList.stream()
@@ -73,7 +68,7 @@ public class AuthorityUtils {
                 .map(app -> authorities.stream()
                         .filter(auth -> Objects.equals(auth.getId(), app.getAuthorityId()))
                         .findFirst().orElse(null))
-                .toList();
+                .collect(Collectors.toList());
 
         return authorities.stream()
                 .filter(item -> removeAuthorities.stream()
@@ -123,4 +118,17 @@ public class AuthorityUtils {
         return tree;
     }
 
+    /**
+     * 填充子权限
+     */
+    public static void fillChildren(List<AuthorityType> result, List<? extends AuthorityType> all, AuthorityType parent) {
+        all.stream()
+                .filter(item -> item.getPid() != null && item.getPid().equals(parent.getId()))
+                .forEach(item -> {
+                    if (result.stream().noneMatch(a -> Objects.equals(a.getId(), item.getId()))) {
+                        result.add(item);
+                    }
+                    fillChildren(result, all, item);
+                });
+    }
 }
